# libtmux-mcp

./: .tmuxp.yaml  AGENTS.md  CHANGES  LICENSE  MIGRATION  README.md  conftest.py  fastmcp.json  justfile  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: AGENTS.md  __init__.py  about.md  clients.md  concepts.md  conf.py  configuration.md  demo.md  development.md  glossary.md  history.md  index.md  installation.md  justfile  manifest.json  prompts.md  quickstart.md  recipes.md  redirects.txt  resources.md
docs/_ext/: __init__.py  fastmcp_autodoc.py
docs/_ext/widgets/: __init__.py  _assets.py  _base.py  _directive.py  _discovery.py  _prehydrate.py  mcp_install.py
docs/_static/css/: custom.css  fastmcp_autodoc.css
docs/_static/js/: prompt-copy.js  spa-copybutton-reinit.js  spa-nav.js
docs/_templates/: page.html
docs/_templates/sidebar/: projects.html
docs/_widgets/mcp-install/: widget.css  widget.html  widget.js
docs/api/: models.md  resources.md  tools.md
docs/guides/: index.md  troubleshooting.md
docs/project/: code-style.md  contributing.md  releasing.md
docs/reference/: compatibility.md
docs/reference/api/: index.md  middleware.md  models.md  resources.md  server.md  tools.md  utils.md
docs/tools/: buffers.md  capture-pane.md  create-window.md  get-pane-info.md  hooks.md  index.md  list-sessions.md  options.md  panes.md  pipe-pane.md  prompts.md  select-layout.md  select-window.md  sessions.md  show-environment.md  show-option.md  wait-for-content-change.md  waits.md  windows.md
docs/tools/batch/: call-destructive-tools-batch.md  call-mutating-tools-batch.md  call-readonly-tools-batch.md  call-tools-batch.md  index.md
docs/tools/buffer/: delete-buffer.md  index.md  load-buffer.md  paste-buffer.md  show-buffer.md
docs/tools/chain/: index.md  run-tmux-operations.md  run-tmux-plan.md
docs/tools/hook/: index.md  show-hook.md  show-hooks.md
docs/tools/pane/: capture-pane.md  capture-since.md  clear-pane.md  display-message.md  enter-copy-mode.md  exit-copy-mode.md  find-pane-by-position.md  get-pane-info.md  index.md  kill-pane.md  paste-text.md  pipe-pane.md  resize-pane.md  respawn-pane.md  run-command.md  search-panes.md  select-pane.md  send-keys-batch.md  send-keys.md  set-pane-title.md  signal-channel.md  snapshot-pane.md  swap-pane.md  wait-for-channel.md  wait-for-content-change.md  wait-for-text.md
docs/tools/server/: create-session.md  get-server-info.md  index.md  kill-server.md  list-servers.md  list-sessions.md  set-environment.md  set-option.md  show-environment.md  show-option.md  where-am-i.md
docs/tools/session/: create-window.md  get-session-info.md  index.md  kill-session.md  list-windows.md  rename-session.md  select-window.md
docs/tools/window/: get-window-info.md  index.md  kill-window.md  list-panes.md  move-window.md  rename-window.md  resize-window.md  select-layout.md  split-window.md
docs/topics/: architecture.md  completion.md  concepts.md  gotchas.md  history-suppression.md  index.md  logging.md  pagination.md  prompting.md  safety.md  troubleshooting.md
scripts/: README.md  mcp_swap.py
src/libtmux_mcp/: __about__.py  __init__.py  __main__.py  _history.py  _json_repair.py  _server_class.py  _server_start.py  _utils.py  _wait_policy.py  middleware.py  models.py  server.py
src/libtmux_mcp/prompts/: __init__.py  recipes.py
src/libtmux_mcp/resources/: __init__.py  hierarchy.py  reference.py
src/libtmux_mcp/tools/: __init__.py  batch_tools.py  buffer_tools.py  chain_tools.py  engine_plan.py  engine_watch.py  env_tools.py  hook_tools.py  option_tools.py  pane_tools.py  server_tools.py  session_tools.py  wait_for_tools.py  window_tools.py
src/libtmux_mcp/tools/pane_tools/: __init__.py  capture_since.py  copy_mode.py  io.py  layout.py  lifecycle.py  meta.py  pipe.py  search.py  state.py  wait.py
tests/: conftest.py  test_batch_tools.py  test_buffer_tools.py  test_chain_tools.py  test_cli.py  test_engine_plan.py  test_engine_watch.py  test_env_tools.py  test_history.py  test_hook_tools.py  test_json_repair.py  test_list_pages.py  test_mcp_swap.py  test_middleware.py  test_option_tools.py  test_package_metadata.py  test_pane_tools.py  test_prompts.py  test_resources.py  test_resources_integration.py  test_server.py  test_server_tools.py  test_session_tools.py  test_spawn_shell_history.py  test_spawn_tools_history.py  test_utils.py  test_wait_for_tools.py  test_wait_policy.py  test_window_tools.py
tests/docs/: __init__.py  _snapshots.py  conftest.py  test_topic_contracts.py  test_widgets.py
tests/docs/__snapshots__/: test_widgets.ambr
tests/docs/_ext/: __init__.py  test_fastmcp_autodoc.py  test_fastmcp_models.py  test_fastmcp_resources.py
